Make ChatSocketServer respond with isAuth boolean instead of secretKey as client-side verification is not required

--- a/ChatSocketController/index.html
+++ b/ChatSocketController/index.html
@@ -33,7 +33,7 @@
           <option>AUTH</option>
           <option>CHAT</option>
           <option>SAY</option>
-          <option>CMD</option>
+          <option selected>CMD</option>
         </select>
       </label>
 
