--- a/ChatSocketController/index.html
+++ b/ChatSocketController/index.html
@@ -27,19 +27,26 @@
     <form id="ChatSocket" class="window" action="javascript:void()" novalidate>
       <h1>ChatSocket</h1>
 
-      <label>
-        Type
-        <select name="type">
-          <option>AUTH</option>
-          <option>CHAT</option>
-          <option>SAY</option>
-          <option selected>CMD</option>
-        </select>
-      </label>
+      <div class="inline">
+        <label>
+          Secret Key
+          <input id="secretKey" name="secretKey" type="text" />
+        </label>
+
+        <label>
+          Type
+          <select name="type">
+            <option>AUTH</option>
+            <option>CHAT</option>
+            <option>SAY</option>
+            <option selected>CMD</option>
+          </select>
+        </label>
+      </div>
 
       <label>
         Value
-        <textarea name="value" rows="3">
+        <textarea name="value" rows="3" cols="120">
 /variables player set Khoeckman ChatSocket "Hello from the other side"</textarea
         >
       </label>
@@ -49,7 +56,7 @@
 
     <div class="window">
       <h2>Log</h2>
-      <div id="log"></div>
+      <div id="log" class="window"></div>
     </div>
   </body>
 </html>
