--- a/ChatSocketController/index.html
+++ b/ChatSocketController/index.html
@@ -30,7 +30,7 @@
       <div class="inline">
         <label>
           Secret Key
-          <input id="secretKey" name="secretKey" type="text" />
+          <input id="secret" name="secret" type="text" />
         </label>
 
         <label>
