--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -44,7 +44,7 @@
   <main>
     <ul id="falling-chars" aria-hidden="true"></ul>
 
-    <form id="ChatSocket" novalidate>
+    <form id="ChatSocket" novalidate data-readystate="3">
       <h1>ChatSocket</h1>
 
       <div class="inline">
