Add log clear button

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -44,7 +44,7 @@
   <main>
     <ul id="falling-chars" aria-hidden="true"></ul>
 
-    <form id="ChatSocket" novalidate data-readystate="3">
+    <form id="chatSocket" novalidate data-readystate="3">
       <h1>ChatSocket</h1>
 
       <div class="inline">
@@ -76,6 +76,7 @@
     </form>
 
     <div id="log" aria-live="polite">
+      <button id="logClear" aria-label="Clear log">Clear</button>
     </div>
   </main>
 
