Add status banner next to title

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -44,8 +44,11 @@
   <main>
     <ul id="falling-chars" aria-hidden="true"></ul>
 
-    <form id="chatSocket" novalidate data-readystate="3">
-      <h1>ChatSocket</h1>
+    <form id="chatSocket" novalidate>
+      <h1>
+        <span>ChatSocket</span>
+        <span id="chatSocketStatus"></span>
+      </h1>
 
       <div class="inline">
         <label class="type">
