--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -22,8 +22,12 @@
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- JS -->
-  <script src="./js/index.js" type="module"></script>
-  <script src="./js/FallingChars.js" type="module"></script>
+  <script src="./js/FallingChars.js" defer></script>
+  <script src="./js/Utils.js" defer></script>
+  <script src="./js/HypixelUtils.js" defer></script>
+  <script src="./js/ChatSocketProtocol.js" defer></script>
+  <script src="./js/ChatSocketWebClient.js" defer></script>
+  <script src="./js/index.js" defer></script>
 </head>
 
 <body>
