Split project specific code into app.js

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -27,6 +27,7 @@
   <script src="./js/HypixelUtils.js" defer></script>
   <script src="./js/ChatSocketProtocol.js" defer></script>
   <script src="./js/ChatSocketWebClient.js" defer></script>
+  <script src="./js/app.js" defer></script>
   <script src="./js/index.js" defer></script>
 </head>
 
