--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -52,7 +52,9 @@
     <form id="chatSocket" action="javascript:void(0)" novalidate>
       <h1>
         <span>ChatSocket</span>
-        <span id="chatSocketStatus" data-ready-state="3" title="Ready state" aria-live="polite">CLOSED</span>
+        <span class="status">
+          <span id="chatSocketStatus" data-ready-state="3" title="Ready state" aria-live="polite">CLOSED</span>
+        </span>
       </h1>
 
       <div class="inline">
