Change CONN -> SERVER and add WORLD event

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -63,9 +63,10 @@
             <option>CHANNEL</option>
             <option>CHANNELS</option>
             <option>CLIENTS</option>
-            <option>CONN</option>
+            <option>SERVER</option>
             <option>CONNECT</option>
             <option>DISCONNECT</option>
+            <option>WORLD</option>
             <option>CHAT</option>
             <option>SAY</option>
             <option selected>CMD</option>
