Split event types into CLIENT_X and SERVER_X

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -67,9 +67,10 @@
             <option>CONNECT</option>
             <option>DISCONNECT</option>
             <option>WORLD</option>
-            <option>CHAT</option>
-            <option>SAY</option>
-            <option selected>CMD</option>
+            <option>CLIENT_SAY</option>
+            <option>SERVER_SAY</option>
+            <option>CLIENT_CMD</option>
+            <option selected>SERVER_CMD</option>
             <option>EXEC</option>
           </select>
         </label>
