Add LOAD and UNLOAD events for join and leaving a mc-world

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -67,6 +67,8 @@
             <option>CONNECT</option>
             <option>DISCONNECT</option>
             <option>WORLD</option>
+            <option>LOAD</option>
+            <option>UNLOAD</option>
             <option>CLIENT_SAY</option>
             <option>SERVER_SAY</option>
             <option>CLIENT_CMD</option>
