--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -22,10 +22,12 @@
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- JS -->
+  <script src="./js/TRA/ByteArrayConverter.js" defer></script>
+  <script src="./js/TRA/TRA.js" defer></script>
   <script src="./js/FallingChars.js" defer></script>
   <script src="./js/Utils.js" defer></script>
   <script src="./js/HypixelUtils.js" defer></script>
-  <script src="./js/ChatSocketProtocol.js" defer></script>
+  <script src="./js/ChatSocketProtocolTRA.js" defer></script>
   <script src="./js/ChatSocketWebClient.js" defer></script>
   <script src="./js/app.js" defer></script>
   <script src="./js/index.js" defer></script>
