Add different .env keys with different permissions and encyprtion enforcements

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -27,7 +27,7 @@
   <script src="./js/FallingChars.js" defer></script>
   <script src="./js/Utils.js" defer></script>
   <script src="./js/HypixelUtils.js" defer></script>
-  <script src="./js/ChatSocketProtocolTRA.js" defer></script>
+  <script src="./js/ChatSocketProtocol.js" defer></script>
   <script src="./js/ChatSocketWebClient.js" defer></script>
   <script src="./js/app.js" defer></script>
   <script src="./js/index.js" defer></script>
