--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -22,14 +22,17 @@
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- JS -->
-  <script src="./js/TRA/ByteArrayConverter.js" defer></script>
-  <script src="./js/TRA/TRA.js" defer></script>
-  <script src="./js/FallingChars.js" defer></script>
-  <script src="./js/Utils.js" defer></script>
-  <script src="./js/HypixelUtils.js" defer></script>
-  <script src="./js/ChatSocketProtocol.js" defer></script>
-  <script src="./js/ChatSocketWebClient.js" defer></script>
-  <script src="./js/app.js" defer></script>
+  <script src="./js/TRA/ByteArrayConverter.js"></script>
+  <script src="./js/TRA/TRA.js"></script>
+  <script src="./js/FallingChars.js"></script>
+  <script src="./js/Utils.js"></script>
+  <script src="./js/HypixelUtils.js"></script>
+  <script src="./js/ChatSocketProtocol.js"></script>
+  <script src="./js/ChatSocketWebClient.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="./js/form/formValidator.js"></script>
+  <script src="./js/form/chatSocket.js" defer></script>
+  <script src="./js/form/chatSocketSettings.js" defer></script>
   <script src="./js/index.js" defer></script>
 </head>
 
@@ -51,7 +54,7 @@
   <main>
     <ul id="falling-chars" aria-hidden="true"></ul>
 
-    <form id="chatSocket" action="javascript:void(0)" novalidate>
+    <form id="chatSocket" action="javascript:void(0)" autocorrect="false" autocapitalize="false" novalidate>
       <h1>
         <span>ChatSocket</span>
         <span id="chatSocketStatus" data-ready-state="3" title="Ready state" aria-live="polite">CLOSED</span>
@@ -82,18 +85,52 @@
         <label class="message">
           Message
           <span class="bytes" aria-hidden="true">(0 B)</span>
-          <input name="chatsocket-message" />
+          <input type="text" name="chatsocket-message" />
         </label>
 
         <label class="data">
           Data
           <span class="bytes" aria-hidden="true">(0 B)</span>
-          <input name="chatsocket-data" value="{}" class="monospace" />
+          <input type="text" name="chatsocket-data" value="{}" class="monospace" />
         </label>
 
         <button type="submit">Send</button>
+        <button type="button" class="settings" onclick="chatSocketSettingsDialog.showModal()" title="Settings">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="800px" height="800px" viewBox="0 0 24 24">
+            <path fill-rule="evenodd" d="M16 12A4 4 0 118 12a4 4 0 018 0Zm-1.5 0a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0Z" />
+            <path fill-rule="evenodd"
+              d="M12 1c-.268 0-.534.01-.797.028-.763.055-1.345.617-1.512 1.304l-.352 1.45c-.02.078-.09.172-.225.22a8.45 8.45 0 00-.728.303c-.13.06-.246.044-.315.002L6.797 3.531c-.604-.368-1.412-.354-1.99.147-.403.348-.78.726-1.129 1.128-.5.579-.515 1.387-.147 1.99l.776 1.275c.042.069.059.185-.002.315-.112.237-.213.48-.302.728-.05.135-.143.206-.221.225l-1.45.352c-.687.167-1.249.749-1.304 1.512a11.149 11.149 0 000 1.594c.055.763.617 1.345 1.304 1.512l1.45.352c.078.02.172.09.22.225.09.248.191.491.303.729.06.129.044.245.002.314l-.776 1.274c-.368.604-.354 1.412.147 1.99.348.403.726.78 1.128 1.129.579.5 1.387.515 1.99.147l1.275-.776c.069-.042.185-.059.315.002.237.112.48.213.728.302.135.05.206.143.225.221l.352 1.45c.167.687.749 1.249 1.512 1.303a11.125 11.125 0 001.594 0c.763-.054 1.345-.616 1.512-1.303l.352-1.45c.02-.078.09-.172.225-.22.248-.09.491-.191.729-.303.129-.06.245-.044.314-.002l1.274.776c.604.368 1.412.354 1.99-.147.403-.348.78-.726 1.129-1.128.5-.579.515-1.387.147-1.99l-.776-1.275c-.042-.069-.059-.185.002-.315.112-.237.213-.48.302-.728.05-.135.143-.206.221-.225l1.45-.352c.687-.167 1.249-.749 1.303-1.512a11.125 11.125 0 000-1.594c-.054-.763-.616-1.345-1.303-1.512l-1.45-.352c-.078-.02-.172-.09-.22-.225a8.469 8.469 0 00-.303-.728c-.06-.13-.044-.246-.002-.315l.776-1.274c.368-.604.354-1.412-.147-1.99-.348-.403-.726-.78-1.128-1.129-.579-.5-1.387-.515-1.99-.147l-1.275.776c-.069.042-.185.059-.315-.002a8.465 8.465 0 00-.728-.302c-.135-.05-.206-.143-.225-.221l-.352-1.45c-.167-.687-.749-1.249-1.512-1.304A11.149 11.149 0 0012 1Zm-.69 1.525a9.648 9.648 0 011.38 0c.055.004.135.05.162.16l.351 1.45c.153.628.626 1.08 1.173 1.278.205.074.405.157.6.249a1.832 1.832 0 001.733-.074l1.275-.776c.097-.06.186-.036.228 0 .348.302.674.628.976.976.036.042.06.13 0 .228L18.412 7.29a1.832 1.832 0 00-.074 1.734c.092.195.175.395.248.6.198.547.652 1.02 1.278 1.172l1.45.353c.111.026.157.106.161.161a9.653 9.653 0 010 1.38c-.004.055-.05.135-.16.162l-1.45.351a1.833 1.833 0 00-1.278 1.173 6.926 6.926 0 01-.25.6 1.832 1.832 0 00.075 1.733l.776 1.275c.06.097.036.186 0 .228a9.555 9.555 0 01-.976.976c-.042.036-.13.06-.228 0l-1.275-.776a1.832 1.832 0 00-1.733-.074 6.926 6.926 0 01-.6.248 1.833 1.833 0 00-1.172 1.278l-.353 1.45c-.026.111-.106.157-.161.161a9.653 9.653 0 01-1.38 0c-.055-.004-.135-.05-.162-.16l-.351-1.45A1.833 1.833 0 009.624 18.587a6.928 6.928 0 01-.6-.25 1.832 1.832 0 00-1.734.075l-1.274.776c-.097.06-.186.036-.228 0a9.56 9.56 0 01-.976-.976c-.036-.042-.06-.13 0-.228l.776-1.275a1.832 1.832 0 00.074-1.733 6.948 6.948 0 01-.249-.6A1.833 1.833 0 004.136 13.204l-1.45-.353c-.111-.026-.157-.106-.161-.161a9.648 9.648 0 010-1.38c.004-.055.05-.135.16-.162l1.45-.351A1.833 1.833 0 005.413 9.624a6.95 6.95 0 01.249-.6A1.832 1.832 0 005.588 7.29L4.812 6.016c-.06-.097-.036-.186 0-.228.302-.348.628-.674.976-.976.042-.036.13-.06.228 0l1.274.776a1.832 1.832 0 001.734.074 6.95 6.95 0 01.6-.249 1.833 1.833 0 001.172-1.277l.353-1.45c.026-.111.106-.157.161-.161Z" />
+          </svg>
+        </button>
       </div>
     </form>
+
+    <dialog id="chatSocketSettingsDialog">
+      <form id="chatSocketSettings" action="javascript:void(0)" autocapitalize="false" autocomplete="off"
+        autocorrect="false" novalidate>
+        <h2>Settings</h2>
+
+        <div class="error-summary">
+          <ul></ul>
+        </div>
+
+        <label class="url">
+          WebSocket Server URL
+          <input id="chatsocketsettings-url" type="text" name="chatsocketsettings-url" autocomplete="url" />
+        </label>
+
+        <label class="secret">
+          Secret Key
+          <input id="chatsocketsettings-secret" type="password" name="chatsocketsettings-secret"
+            autocomplete="new-password" />
+        </label>
+
+        <div class="actions">
+          <button type="submit">Save</button>
+          <button type="button" class="error" onclick="chatSocketSettingsDialog.close()">Close</button>
+        </div>
+      </form>
+    </dialog>
 
     <div id="log" class="monospace" aria-live="polite"></div>
   </main>
