Add CONTAINER event type

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -79,6 +79,7 @@
             <option>SERVER_SAY</option>
             <option>CLIENT_CMD</option>
             <option selected>SERVER_CMD</option>
+            <option>CONTAINER</option>
             <option>EXEC</option>
           </select>
         </label>
