Add settings form reset button

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -148,6 +148,7 @@
 
         <div class="actions">
           <button type="submit">Save</button>
+          <button id="chatsocketsettings-action-reset" type="button" class="error">Reset</button>
           <button type="button" class="error" onclick="chatSocketSettingsDialog.close()">Close</button>
         </div>
       </form>
