Change class name as its not localStorage only

--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- JS -->
-  <script src="./js/LocalStorageManager.js"></script>
+  <script src="./js/StorageManager.js"></script>
   <script src="./js/TRA/ByteArrayConverter.js"></script>
   <script src="./js/TRA/TRA.js"></script>
   <script src="./js/Utils.js"></script>
