--- a/ChatSocketWebClient/index.html
+++ b/ChatSocketWebClient/index.html
@@ -158,7 +158,7 @@
   </main>
 
   <footer>
-    <p>Copyright © 2025 Kyle Hoeckman, All rights reserved.</p>
+    <p>Copyright © Kyle Hoeckman 2025, All rights reserved.</p>
   </footer>
 </body>
 
